src/sqnim.nim


# raw object handling
proc sq_getstackobj*(v: HSQUIRRELVM, idx: SQInteger, po: var HSQOBJECT): SQRESULT {.importc: "sq_getstackobj".}
proc sq_pushobject*(v: HSQUIRRELVM, obj: HSQOBJECT) {.importc: "sq_pushobject".}
proc sq_addref*(v: HSQUIRRELVM, po: var HSQOBJECT) {.importc: "sq_addref".}
proc sq_release*(v: HSQUIRRELVM, po: var HSQOBJECT): SQBool {.importc: "sq_release".}
proc sq_getrefcount*(v: HSQUIRRELVM, po: var HSQOBJECT): SQUnsignedInteger {.importc: "sq_getrefcount".}
proc sq_resetobject*(po: var HSQOBJECT) {.importc: "sq_resetobject".}
proc sq_objtostring*(o: var HSQOBJECT): SQString {.importc: "sq_objtostring".}
proc sq_objtointeger*(o: var HSQOBJECT): SQInteger {.importc: "sq_objtointeger".}
proc sq_objtofloat*(o: var HSQOBJECT): SQFloat {.importc: "sq_objtofloat".}
proc sq_getvmrefcount*(v: HSQUIRRELVM, o: var HSQOBJECT): SQUnsignedInteger {.importc: "sq_getvmrefcount".}

# register methods
proc sqstd_register_bloblib*(v: HSQUIRRELVM) {.importc: "sqstd_register_bloblib".}
proc sqstd_register_iolib*(v: HSQUIRRELVM) {.importc: "sqstd_register_iolib".}
proc sqstd_register_mathlib*(v: HSQUIRRELVM) {.importc: "sqstd_register_mathlib".}
proc sqstd_register_stringlib*(v: HSQUIRRELVM) {.importc: "sqstd_register_stringlib".}
proc sqstd_register_systemlib*(v: HSQUIRRELVM) {.importc: "sqstd_register_systemlib".}

# compiler helpers
proc sqstd_loadfile*(v: HSQUIRRELVM, filename: cstring, printerror: SQBool): SQRESULT {.importc: "sqstd_loadfile".}
proc sqstd_dofile*(v: HSQUIRRELVM, filename: cstring, retval, printerror: SQBool): SQRESULT {.importc: "sqstd_dofile".}
proc sqstd_writeclosuretofile*(v: HSQUIRRELVM, filename: cstring): SQRESULT {.importc: "sqstd_writeclosuretofile".}

# aux
proc sqstd_seterrorhandlers*(v: HSQUIRRELVM) {.importc: "sqstd_seterrorhandlers".}
proc sqstd_printcallstack*(v: HSQUIRRELVM) {.importc: "sqstd_printcallstack".}

# util
proc printfunc*(v: HSQUIRRELVM, s: cstring) {.importc: "printfunc", cdecl, varargs.}

proc SQ_FAILED*(res: SQInteger): bool {.inline.} = res < 0
proc SQ_SUCCEEDED*(res: SQInteger): bool {.inline.} = res >= 0

converter toSQBool*(b: bool): SQBool =
  if b: SQTrue else: SQFalse

converter toSQInteger*(i: int): SQInteger =
  i.SQInteger

converter toSQFloat*(i: float): SQFloat =
  i.SQFloat

converter toSQString*(s: string): SQString =
  s.SQString
